* Filter out session info for MongoDB database inventory
* Update users inventory support on win32
* PR #261: Fix regexp for IPMI FRU Controller inventory, thanks to po1vo
* PR #262: Fix docker networks are virtual, thanks to po1vo
* fix #258: Fix slots support on AIX
* Fix HPUX slots support
* PR #295: Update aliased network interfaces support on linux, thanks to po1vo

remoteinventory:
* Fix USERNAME & PASSWORD environment variable support with ssh remote inventory
* fix #157: failure when creating a new winrm remote if a ssh one has been defined
* Fix remoteGlob function for ssh remote inventory as it was preventing storage
  inventory to work properly when accessing remote via ssh command
* Don't try to register/update remotes when provided via --remote glpi-agent option
* Support 'remote-workers' configuration to define how many remoteinventory we can
  run in parallel
* Initialize libssh2 in workers
* Use vardir as home for .ssh/known_hosts file with libssh2 on windows
* Fix environment inventory
* Fix wrong encoding with winrm
* Fix current users inventory via winrm
* fix #160: Fix error when running winrm inventory from windows
* Optimize few more API while using libssh2
* More ssh inventory optimization while using libssh2
* Updated remote modes support: perl, ssh and libssh2 for remote ssh, ssl for winrm
* Fix libssh2 was missing from win32 packaging

netdiscovery/netinventory:
* Avoid to record invalid MAC Address from Netbios during netdiscovery task
* Enhanced Idrac support getting serialnumber, thanks to spinal_df on the forum
* Add support for option --v1 & --v2c to glpi-netdiscovery and glpi-netinventory scripts
* fix #277: Wrong IFNUMBER set in connections for some devices supporting LLDP
* Fix to support constraint on IFPORTDUPLEX, IFSTATUS & IFINTERNALSTATUS to prevent
  devices not respecting standards to be rejected by GLPI 10. This can fix the import
  of few Fortinet devices.
* Add support for Zyxel devices

deploy: