@@ -49,6 +49,7 @@ inventory:
 * fix #258: Fix slots support on AIX
 * Fix HPUX slots support
 * PR #295: Update aliased network interfaces support on linux, thanks to po1vo
+* Add vpn connection as virtual interface on win32
 
 remoteinventory:
 * Fix USERNAME & PASSWORD environment variable support with ssh remote inventory
